--- a/css/styles.css
+++ b/css/styles.css
@@ -1,47 +1,42 @@
 :root {
---primary-text-color:#757575;
---title-text-color:#212121;
---accent-color:#2196F3;
---hero-color:#2F303A ;
+  --primary-text-color: #757575;
+  --title-text-color: #212121;
+  --accent-color: #2196f3;
+  --hero-color: #2f303a;
 }
-
 
 body {
-color:#757575 ;
-background-color: #FFFFFF ;
+  color: #757575;
+  background-color: #ffffff;
 
-font-family: "Roboto", sans-serif;
-font-style: normal;
-font-weight: 500;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 500;
 }
 
-
-
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 a {
-    text-decoration: none;
-    color: var(--primary-text-color);
+  text-decoration: none;
+  color: var(--primary-text-color);
 }
-a:hover{
-    color: var(--accent-color);
+a:hover {
+  color: var(--accent-color);
 }
 
 .section-title,
 .comand-title,
 .skils-title,
-.img-title
- {
-    color:var(--title-text-color);
+.img-title,
+.pic-title {
+  color: var(--title-text-color);
 }
 
-.btn,
-.btn-portfolio {
-    cursor: pointer;
+button {
+  cursor: pointer;
 }
-
 
 /* цвет основного текста #757575 */
 
@@ -53,606 +48,352 @@ a:hover{
 
 /* цвет героя #2F303A */
 
-
 /* шапка сайта */
 
-.head {
-position: absolute;
-width: 1600px;
-height: 80px;
-}
-
 .logo {
-color: #212121;
-position: absolute;
-width: 145px;
-height: 31px;
-left: 215px;
-top: 24px;
-font-family: Raleway;
-font-style: normal;
-font-weight: 400;
-font-size: 26px;
-line-height: 1.2;
+  color: #212121;
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
 }
 
 .logo-color {
-    color: #2196F3 ;
+  color: #2196f3;
 }
 
 /* навигация сайта */
 
 .site-nav {
-font-size: 14px;
-line-height: 1.2;
-letter-spacing: 0.02em;
+  font-size: 14px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  letter-spacing: 0.02em;
 }
 .site-nav .link {
-    color: var(--title-text-color) ;
-
+  color: var(--title-text-color);
 }
 
 .site-nav .link:hover,
 .site-nav .link:focus {
-    color:var(--accent-color);
+  color: var(--accent-color);
 }
 
 .site-nav .link.current {
-   color: #2196F3;
+  color: #2196f3;
 }
 
-.nav-studio{
-position: absolute;
-width: 49px;
-height: 16px;
-left: 453px;
-top: 32px;
-font-size: 14px;
-line-height: 1.1;
-letter-spacing: 0.02em;
+.nav-studio {
+  font-size: 14px;
+  line-height: 1.1;
+  letter-spacing: 0.02em;
 }
 
 .nav-portfolio {
-position: absolute;
-width: 77px;
-height: 16px;
-left: 552px;
-top: 32px;
-font-size: 14px;
-line-height: 1.1;
-letter-spacing: 0.02em;
+  font-size: 14px;
+  line-height: 1.1;
+  letter-spacing: 0.02em;
 }
 
-.nav-contakt{
-position: absolute;
-width: 68px;
-height: 16px;
-left: 679px;
-top: 32px;
-font-size: 14px;
-line-height: 1.1;
-letter-spacing: 0.02em;
+.nav-contakt {
+  font-size: 14px;
+  line-height: 1.1;
+  letter-spacing: 0.02em;
 }
 
-.link-gmail{
-position: absolute;
-width: 135px;
-height: 16px;
-left: 1078px;
-top: 32px;
-font-size: 14px;
-line-height: 1.1;
-letter-spacing: 0.02em;
+.link-gmail {
+  font-size: 14px;
+  line-height: 1.1;
+  letter-spacing: 0.02em;
 }
 
 .link-phone {
-position: absolute;
-width: 122px;
-height: 16px;
-left: 1263px;
-top: 32px;
-font-size: 14px;
-line-height: 1.1;
-letter-spacing: 0.02em;
+  font-size: 14px;
+  line-height: 1.1;
+  letter-spacing: 0.02em;
 }
-
 
 /* Герой */
 
 .section-hero {
-position: absolute;
-width: 1600px;
-height: 600px;
-top: 80px;
-background: var(--hero-color);
+  position: absolute;
+  width: 1600px;
+  height: 600px;
+  top: 80px;
+  background-color: var(--hero-color);
 }
 
 h1 {
-position: absolute;
-width: 696px;
-height: 120px;
-left: 452px;
-top: 00px;
-font-weight:700;
-font-size: 44px;
-line-height: 1.3;
-text-align: center;
-letter-spacing: 0.06em;
-text-transform: uppercase;
-color: #FFFFFF;
+  font-weight: 700;
+  font-size: 44px;
+  line-height: 1.3;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: #ffffff;
 }
 
-.section-hero >button {
-background-color: var(--accent-color);
-position: absolute;
-width: 200px;
-height: 50px;
-left: 700px;
-top: 350px;
-font-size: 16px;
-font-weight: 700;
-color: #FFFFFF;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-border-radius: 4px;
-
+.section-hero > button {
+  background-color: var(--accent-color);
+  font-size: 16px;
+  font-weight: 700;
+  color: #ffffff;
 }
 
 /* Достоинства */
 
- .slogan-one >h3{
-position: absolute;
-width: 270px;
-height: 16px;
-left: 215px;
-top: 774px;
-font-weight:700;
-font-size: 14px;
-line-height: 1.1;
-letter-spacing: 0.03em;
-text-transform: uppercase;
+.slogan-one > h3 {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.1;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
 
-.slogan-one >p{
-    position: absolute;
-width: 270px;
-height: 75px;
-left: 215px;
-top: 800px;
-font-weight:400;
-font-size: 14px;
-line-height: 1.7;
-letter-spacing: 0.03em;
+.slogan-one > p {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
 }
 
-.slogan-two >h3 {
-position: absolute;
-width: 270px;
-height: 16px;
-left: 515px;
-top: 774px;
-font-weight:700;
-font-size: 14px;
-line-height: 1.1;
-letter-spacing: 0.03em;
-text-transform: uppercase;
+.slogan-two > h3 {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.1;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
 
-.slogan-two >p {
-    position: absolute;
-width: 270px;
-height: 75px;
-left: 515px;
-top: 800px;
-font-weight:400;
-font-size: 14px;
-line-height: 1.7;
-letter-spacing: 0.03em;
+.slogan-two > p {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
 }
 
-.slogan-three >h3 {
-position: absolute;
-width: 270px;
-height: 16px;
-left: 815px;
-top: 774px;
-font-weight:700;
-font-size: 14px;
-line-height: 1.1;
-letter-spacing: 0.03em;
-text-transform: uppercase;
+.slogan-three > h3 {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.1;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
 
-.slogan-three >p {
-position: absolute;
-width: 270px;
-height: 75px;
-left: 815px;
-top: 800px;
-font-weight:400;
-font-size: 14px;
-line-height: 1.7;
-letter-spacing: 0.03em;
+.slogan-three > p {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
 }
 
-.slogan-four >h3 {
-position: absolute;
-width: 270px;
-height: 16px;
-left: 1115px;
-top: 774px;
-font-weight:700;
-font-size: 14px;
-line-height: 1.1;
-letter-spacing: 0.03em;
-text-transform: uppercase;
+.slogan-four > h3 {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.1;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
 
-.slogan-four >p {
-position: absolute;
-width: 270px;
-height: 75px;
-left: 1115px;
-top: 800px;
-font-weight:400;
-font-size: 14px;
-line-height: 1.7;
-letter-spacing: 0.03em;
+.slogan-four > p {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
 }
-
-
 
 /* Чем мы занимаемся */
 
 .skils-title {
-position:absolute;
-width: px;
-height: 42px;
-left: 612px;
-top: 933px;
-font-size: 36px;
-line-height: 1.7;
-text-align: center;
-letter-spacing: 0.03em;
-
+  font-size: 36px;
+  line-height: 1.7;
+  text-align: center;
+  letter-spacing: 0.03em;
 }
-
-.img-box1 {
-    position: absolute;
-width: 370px;
-height: 294px;
-left: 215px;
-top: 1061px;
-}
-
-.img-img {
-    position: absolute;
-width: 370px;
-height: 294px;
-left: 615px;
-top: 1061px;
-}
-
-.img-box3 {
-    position: absolute;
-width: 370px;
-height: 294px;
-left: 1015px;
-top: 1061px;
-}
-
 
 /* Наша команда */
 
 .section-comand {
-position: absolute;
-width: 1600px;
-height: 648px;
-left: 0px;
-top: 1431px;
-
-background: #F5F4FA;
+  background: #f5f4fa;
 }
 
 .comand-title {
-position:fixed
-width: 264px;
-height: 42px;
-left: 668px;
-top: 28px;
-font-size: 36px;
-line-height: 1.7;
-text-align: center;
-letter-spacing: 0.03em;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.7;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
+.img-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.2;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
+.img-subtitle {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.2;
+  text-align: center;
+  letter-spacing: 0.03em;
 }
 
 .img-igor {
-    position: absolute;
-text-align: center;
-width: 270px;
-height: 368px;
-left: 215px;
-top: 120px;
-background: #FFFFFF;
-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-border-radius: 0px 0px 4px 4px;
+  text-align: center;
+  background: #ffffff;
 }
 
-.img-olga{
-   position: absolute;
-   text-align: center;
-width: 270px;
-height: 368px;
-left: 515px;
-top: 120px;
-background: #FFFFFF;
-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-border-radius: 0px 0px 4px 4px;
-
+.img-olga {
+  text-align: center;
+  background: #ffffff;
 }
 
 .img-nik {
-   position: absolute;
-   text-align: center;
-width: 270px;
-height: 368px;
-left: 815px;
-top: 120px;
-background: #FFFFFF;
-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-border-radius: 0px 0px 4px 4px;
+  text-align: center;
+  background: #ffffff;
 }
 
 .img-mik {
- position: absolute;
- text-align: center;
-width: 270px;
-height: 368px;
-left: 1115px;
-top: 120px;
-background: #FFFFFF;
-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-border-radius: 0px 0px 4px 4px;
+  text-align: center;
+  background: #ffffff;
 }
 
 /* Футер */
 
-footer { 
-    position: absolute;
-width: 1600px;
-height: 252px;
-left: 0px;
-top: 2097px;
-
-background: #2F303A;
+footer {
+  background: #2f303a;
 }
 
-.footer >a{
-    position: absolute;
-width: 145px;
-height: 31px;
-left: 215px;
-top: 60px;
-font-size: 26px;
-line-height: 1.2;
-letter-spacing: 0.03em;
-color: #FFFFFF;
+.footer > a {
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  color: #ffffff;
 }
 
-.footer >a:hover {
-    color: var(--accent-color);
+.footer > a:hover {
+  color: var(--accent-color);
 }
 
+address {
+  font-style: normal;
+}
 
-.footer > address  p{
-   position: absolute;
-width: 231px;
-height: 21px;
-left: 215px;
-top: 98px;
-font-style: normal;
-font-size: 14px;
-line-height: 1.7;
-letter-spacing: 0.03em;
-color: #FFFFFF;
+.footer > address p {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  color: #ffffff;
 }
 
 .footer-gmail {
-    position: absolute;
-width: 231px;
-height: 21px;
-left: 215px;
-top: 142px;
-font-style: normal;
-font-size: 14px;
-line-height: 1.7;
-letter-spacing: 0.03em;
-color:rgba(255, 255, 255, 0.6);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
 }
 
 .footer-phone {
-    position: absolute;
-width: 231px;
-height: 21px;
-left: 215px;
-top: 172px;
-
-font-family: Roboto;
-font-style: normal;
-font-weight: normal;
-font-size: 14px;
-line-height: 1.7;
-letter-spacing: 0.03em;
-color:rgba(255, 255, 255, 0.6);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
 }
-
 
 /* Portfolio */
 .section-portfolio .title {
-    color: var(--title-text-color);
-} 
+  color: var(--title-text-color);
+}
 /* секция кнопок */
 .btn-portfolio {
-    color:var(--title-text-color);
-    background-color: #F5F4FA;
-border: 1px solid #EEEEEE;
-box-sizing: border-box;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.6;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--title-text-color);
+  background-color: #f5f4fa;
 }
 
 .btn-portfolio:hover,
 .btn-portfolio:focus {
-    color: #FFFFFF;
-    background-color: #2196F3;
+  color: #ffffff;
+  background-color: #2196f3;
 }
-
 
 /* основной контент */
 
 .btn-all {
-    position: absolute;
-width: 73px;
-height: 38px;
-left: 495px;
-top: 174px;
 }
 
 .btn-web {
-    position: absolute;
-width: 128px;
-height: 38px;
-left: 576px;
-top: 174px;
 }
 
-.btn-soft{
-    position: absolute;
-width: 145px;
-height: 38px;
-left: 712px;
-top: 174px;
+.btn-soft {
 }
 
-.btn-diz{
-    position: absolute;
-width: 103px;
-height: 38px;
-left: 865px;
-top: 174px;
+.btn-diz {
 }
 
 .btn-mrct {
- position: absolute;
-width: 130px;
-height: 38px;
-left: 976px;
-top: 174px;
 }
 
-
 .pic-tehno {
-    position: absolute;
-width: 370px;
-height: 404px;
-left: 215px;
-top: 262px;
-
-background: #FFFFFF;
-border: 1px solid #EEEEEE;
-box-sizing: border-box;
+  background: #ffffff;
 }
 
 .pic-nogs {
-    position: absolute;
-width: 370px;
-height: 404px;
-left: 615px;
-top: 262px;
-
-background: #FFFFFF;
-border: 1px solid #EEEEEE;
-box-sizing: border-box;
+  background: #ffffff;
 }
 
-.pic-seafood{
-    position: absolute;
-width: 370px;
-height: 404px;
-left: 1015px;
-top: 262px;
-
-background: #FFFFFF;
-border: 1px solid #EEEEEE;
-box-sizing: border-box;
+.pic-seafood {
+  background: #ffffff;
 }
 
 .pic-prime {
-    position: absolute;
-width: 370px;
-height: 404px;
-left: 215px;
-top: 696px;
-
-background: #FFFFFF;
-border: 1px solid #EEEEEE;
-box-sizing: border-box;
+  background: #ffffff;
 }
 
 .pic-boxes {
-    
-position: absolute;
-width: 370px;
-height: 404px;
-left: 615px;
-top: 696px;
-
-background: #FFFFFF;
-border: 1px solid #EEEEEE;
-box-sizing: border-box;
+  background: #ffffff;
 }
 
-.pic-ihnb{
-    position: absolute;
-width: 370px;
-height: 404px;
-left: 1015px;
-top: 696px;
-
-background: #FFFFFF;
-border: 1px solid #EEEEEE;
-box-sizing: border-box;
+.pic-ihnb {
+  background: #ffffff;
 }
 
 .pic-le {
-    position: absolute;
-width: 370px;
-height: 404px;
-left: 215px;
-top: 1130px;
-
-background: #FFFFFF;
-border: 1px solid #EEEEEE;
-box-sizing: border-box;
+  background: #ffffff;
 }
 
 .pic-lab {
-    position: absolute;
-width: 370px;
-height: 404px;
-left: 615px;
-top: 1130px;
-
-background: #FFFFFF;
-border: 1px solid #EEEEEE;
-box-sizing: border-box;
+  background: #ffffff;
 }
 
 .pic-gb {
-    position: absolute;
-width: 370px;
-height: 404px;
-left: 1015px;
-top: 1130px;
+  background: #ffffff;
+}
 
-background: #FFFFFF;
-border: 1px solid #EEEEEE;
-box-sizing: border-box;
+.pic-title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+
+.pic-subtitle {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.8;
+  letter-spacing: 0.03em;
+  color: #757575;
 }
