--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,7 @@ h1 {
   padding: 0px;
 }
 
-section > button {
+.hero-button {
   background-color: var(--accent-color);
   font-size: 16px;
   font-weight: 700;
@@ -294,7 +294,7 @@ footer {
   background: #2f303a;
 }
 
-.footer > a {
+.footer .logo {
   font-weight: 700;
   font-size: 26px;
   line-height: 1.2;
@@ -302,7 +302,7 @@ footer {
   color: #ffffff;
 }
 
-.footer > a:hover {
+.footer .logo:hover {
   color: var(--accent-color);
 }
 
@@ -310,7 +310,7 @@ address {
   font-style: normal;
 }
 
-.footer > address p {
+footer > div > address p {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.7;
