--- a/css/style.css
+++ b/css/style.css
@@ -87,14 +87,24 @@ button {
 
 /* навигация сайта */
 
+.head-nav {
+  padding-left: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .site-nav {
   font-size: 14px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   letter-spacing: 0.02em;
+  display: flex;
 }
 .site-nav .link {
   color: var(--title-text-color);
+
+  margin-left: 50px;
 }
 
 .site-nav .link:hover,
@@ -110,18 +120,26 @@ button {
   font-size: 14px;
   line-height: 1.1;
   letter-spacing: 0.02em;
+  argin: 32px 50px 0px 0px;
 }
 
 .nav-portfolio {
   font-size: 14px;
   line-height: 1.1;
   letter-spacing: 0.02em;
+  argin: 32px 50px 0px 0px;
 }
 
 .nav-contakt {
   font-size: 14px;
   line-height: 1.1;
   letter-spacing: 0.02em;
+  argin: 32px 0px 32px 0px;
+}
+/* Auth-nav */
+
+.auth-nav {
+  display: flex;
 }
 
 .link-gmail {
@@ -134,6 +152,8 @@ button {
   font-size: 14px;
   line-height: 1.1;
   letter-spacing: 0.02em;
+
+  margin-left: 50px;
 }
 
 /* Герой */
@@ -301,6 +321,8 @@ h1 {
 
 footer {
   background: #2f303a;
+
+  height: 252px;
   margin-top: 10px;
 }
 
@@ -309,11 +331,22 @@ footer {
   font-size: 26px;
   line-height: 1.2;
   letter-spacing: 0.03em;
+
   color: #ffffff;
+
+  display: block;
+
+  padding-left: 15px;
+  padding-top: 60px;
 }
 
 .footer .logo:hover {
   color: var(--accent-color);
+}
+
+.address-menu {
+  padding-left: 15px;
+  margin-top: 20px;
 }
 
 address {
@@ -379,25 +412,41 @@ footer > div > address p {
 
 .btn-all > button {
   min-width: 73px;
+  margin: 0px 8px 0px 292px;
 }
 
 .btn-web > button {
   min-width: 128px;
+  margin: 0px 8px 0px 0px;
 }
 
 .btn-soft > button {
   min-width: 145px;
+  margin: 0px 8px 0px 0px;
 }
 
 .btn-diz > button {
   min-width: 103px;
+  margin: 0px 8px 0px 0px;
 }
 
 .btn-mrct > button {
   min-width: 130px;
+  margin: 0px 8px 0px 0px;
 }
 
 /* Галерея */
+
+.section-portfolio .menu {
+  flex-wrap: wrap;
+  lex-basis: calc(100% / 3 -15px);
+}
+
+.section-portfolio > ul > li {
+  margin-left: 5px;
+  margin-top: 5px;
+}
+
 .pic-tehno {
   background: #ffffff;
 }
