--- a/sass/components/_section-comand.scss
+++ b/sass/components/_section-comand.scss
@@ -54,9 +54,9 @@
 }
 
 .comand-network__list {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
 
   padding-top: 16px;
   padding-bottom: 30px;
