--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -75,11 +75,23 @@ button {
 }
 
 .container {
-  width: 1200px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
+  @media screen and (min-width: 480px) {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    max-width: 448px;
+  }
+  @media screen and (min-width: 768px) {
+    max-width: 720px;
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 1200px;
+  }
 }
 
 .section {
