--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,3 +11,5 @@
 @import "./components/portfolio-cart-section";
 @import "./components/modal-header";
 @import "./components/modal-form";
+@import "./components/products";
+@import "./components/footer-ice";
